--- a/spa-react/app/package.json
+++ b/spa-react/app/package.json
@@ -8,9 +8,11 @@
     "popper.js": "^1.14.3",
     "pubsub-js": "^1.6.0",
     "react": "^16.4.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
